# optifi

./: optifi.code-workspace
Optifi/programs/Optifi/: Cargo.toml
Optifi/programs/Optifi/src/: constants.rs  errors.rs  lib.rs  macros.rs
Optifi/programs/Optifi/src/financial/: amm.rs  asset.rs  chain.rs  config.rs  instruments.rs  liquidations.rs  market.rs  market_maker.rs  mod.rs  oracle.rs  orderbook_utils.rs  orders.rs
Optifi/programs/Optifi/src/instructions/: chain_instructions.rs  fees.rs  init_optifi_exchange.rs  mod.rs
Optifi/programs/Optifi/src/state/: amm_state.rs  exchange.rs  liquidation_state.rs  market_maker_account.rs  mod.rs  position.rs  user_account.rs
Optifi/programs/Optifi/src/utils/: pda.rs
Optifi/programs/Optifi/tests/: test_amm_calculations.rs  test_option_calculations.rs
OptifiDataOrchestration/programs/orchestrator/: Cargo.toml
OptifiDataOrchestration/programs/orchestrator/migrations/2022-02-02-164012_create_optifi_init/: down.sql  up.sql
OptifiDataOrchestration/programs/orchestrator/migrations/2022-02-13-025202_drop_underlying/: down.sql  up.sql
OptifiDataOrchestration/programs/orchestrator/migrations/2022-02-13-162141_change_market_column/: down.sql  up.sql
OptifiDataOrchestration/programs/orchestrator/migrations/2022-02-14-034458_add_optifi_market_id/: down.sql  up.sql
OptifiDataOrchestration/programs/orchestrator/migrations/2022-02-14-050528_remove_chain_address/: down.sql  up.sql
OptifiDataOrchestration/programs/orchestrator/migrations/2022-02-14-170000_remove_total_bid_ask/: down.sql  up.sql
OptifiDataOrchestration/programs/orchestrator/src/: constants.rs  lib.rs  macros.rs
OptifiDataOrchestration/programs/orchestrator/src/db/: fixtures.rs  mod.rs  models.rs  resolvers.rs  schema.rs
OptifiDataOrchestration/programs/orchestrator/src/errors/: errors.rs
OptifiDataOrchestration/programs/orchestrator/src/optifi/: chains_instruments.rs  conversions.rs  exchanges.rs  mod.rs
OptifiDataOrchestration/programs/orchestrator/src/solana/: compliant_client.rs  mod.rs  network.rs  signatures.rs  transactions.rs
OptifiDataOrchestration/programs/orchestrator/src/workers/: exchange.rs  mod.rs  monitor.rs  program.rs
OptifiDataOrchestration/programs/orchestrator/tests/: test_account_deserialization.rs  test_client_synchronization.rs  test_find_exchanges.rs  test_transaction_streaming.rs  utils.rs
OptifiDataOrchestration/programs/runner/: Cargo.toml
OptifiDataOrchestration/programs/runner/src/: conf.rs  main.rs
(+351 files in other folders)
