[package]
name = "Optifi"
version = "0.1.1"
description = "The Optifi trading system"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "optifi"

[features]
mainnet = []
devnet = []
testing = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
optifi-proc-macros = { path = "../../libraries/optifi-proc-macros" }
borsh = "0.9.1"
arrayref = "0.3.6"
anchor-lang = "0.18.2"
static_assertions = "1.1.0"
serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
thiserror = "1.0"
solana-program = "1.7"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
anchor-spl = "0.18.2"
ndarray = "0.15.3"
lazy_static = "1.4.0"
switchboard-program = "0.2"