[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
solana-sdk = "1.8"
solana-client = "1.8"
solana-transaction-status = "1.8"
flexi_logger = { version="0.22" }
lazy_static = "1.4"
uuid = "0.8.2"
reqwest = "0.11"
tokio = { version="1", features = ["full"] }
anchor-client = "0.18.2"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
thiserror = "1"
tokio-stream = "0.1"
sha2 = "0.9"
futures = "0.3"
async-stream = "0.3"
futures-util = "0.3"
borsh = "0.9"
crossbeam-channel = "0.5"
num_cpus = "1"
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
Optifi = { version = "0.1.1", git="ssh://git@github.com/Optifi-Team/Optifi", features=["devnet"]}
serum_dex = { version = "0.4", git = "https://github.com/blockworks-foundation/serum-dex.git", features=["client"] }
serum-common = { git = "https://github.com/blockworks-foundation/serum-dex.git", features=["client"] }
anyhow = "1.0.32"
safe-transmute = "0.11.0"
bytemuck = "1.7"
enumflags2 = "0.6.4"
arrayref = "0.3.6"