[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orchestrator = { path = "../orchestrator" }
log = "0.4"
flexi_logger = { version="0.22", features=["colors"] }
dotenv = "0.15.0"